--- a/app/src/main/res/layout/fragment_all_weather.xml
+++ b/app/src/main/res/layout/fragment_all_weather.xml
@@ -2,15 +2,33 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@color/ll_background">
+              android:background="@color/ll_background"
+              android:orientation="vertical">
 
-
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="12345"
-        android:textColor="@color/white"
-        android:textSize="@dimen/text_size1"/>
+        android:layout_height="50dp">
+
+        <ImageView
+            android:id="@+id/fm_aw_iv_back"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_chevron_left"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="常用城市"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_title_size"/>
+
+    </RelativeLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/fm_aw_rv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
