--- a/app/src/main/res/layout/fragment_all_weather.xml
+++ b/app/src/main/res/layout/fragment_all_weather.xml
@@ -29,6 +29,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/fm_aw_rv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent"
+        android:layout_margin="15dp"></android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
