--- a/app/src/main/res/layout/fragment_all_weather.xml
+++ b/app/src/main/res/layout/fragment_all_weather.xml
@@ -7,7 +7,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="50dp"
+        android:background="@color/colorPrimary">
 
         <ImageView
             android:id="@+id/fm_aw_iv_back"
