--- a/app/src/main/res/layout/aw_item.xml
+++ b/app/src/main/res/layout/aw_item.xml
@@ -2,39 +2,44 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/colorPrimary"
-                android:gravity="center_vertical"
-                android:padding="20dp">
+                android:gravity="center_vertical">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:background="@color/colorPrimary"
+        android:padding="5dp">
 
-        <TextView
-            android:id="@+id/item_aw_tv_info"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="晴"
-            android:textColor="@color/white"
-            android:textSize="@dimen/text_title_size0"/>
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/item_aw_tv_info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="晴"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_title_size0"/>
+
+            <TextView
+                android:id="@+id/item_aw_tv_county_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="长清"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_title_size2"/>
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/item_aw_tv_county_name"
+            android:id="@+id/item_aw_tv_tmp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="长清"
+            android:layout_alignParentRight="true"
+            android:text="20℃"
             android:textColor="@color/white"
-            android:textSize="@dimen/text_title_size2"/>
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/item_aw_tv_tmp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:text="20℃"
-        android:textColor="@color/white"
-        android:textSize="@dimen/text_size2"/>
-
+            android:textSize="@dimen/text_size2"/>
+    </RelativeLayout>
 </RelativeLayout>
